--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,10 @@ p {
 }
 
 /* Helpers */
+.mt-25px {
+    margin-top: 25px;
+}
+
 .mt-50px {
     margin-top: 50px;
 }
@@ -243,17 +247,17 @@ p {
     display: table;
 }
 
-.movie-table {
+.data-table {
     margin-top: 50px;
 }
 
-.movie-table table {
+.data-table table {
     border-collapse: collapse;
     width: 100%;
     margin-bottom: 16px;
 }
 
-.movie-table table th {
+.data-table table th {
     background-color: #bbb;
     color: #000;
     border: 0px;
@@ -265,36 +269,29 @@ p {
     text-align: left;
 }
 
-.movie-table table th:last-child {
+.data-table table th:last-child {
     cursor: unset;
 }
 
-.movie-table table tr:nth-child(even) {
+.data-table table tr:nth-child(even) {
     background-color: #e7e7e7;
 }
 
-.movie-table table tr:nth-child(odd) {
+.data-table table tr:nth-child(odd) {
     background-color: #f5f5f0;
 }
 
-.movie-table table tr:hover {
+.data-table table tr:hover {
     background-color: #e1e9f2;
 }
 
-.movie-table table a {
+.data-table table a {
     text-decoration: none;
 }
 
-.movie-table table td {
+.data-table table td {
     border-collapse: collapse;
     padding: 0.8ch 1ch 0.8ch 1ch;
-}
-
-.movie-table  table.reference,
-.movie-table  table.reference th,
-.movie-table  table.reference td {
-    border: 0px;
-    padding: 0;
 }
 /* /CRUD */
 
@@ -324,3 +321,19 @@ p {
     font-size: 12px;
 }
 /* /HTML5 */
+
+/* ChartJS */
+.chart-table {
+    max-width: 800px;
+    margin: 0 auto;
+    margin-bottom: 20px
+}
+
+#lineChart {
+    max-width: 600px;
+    width: auto;
+    max-height: 400px;
+    height: auto;
+    margin: 0 auto;
+}
+/* /ChartJS */
