--- a/css/style.css
+++ b/css/style.css
@@ -255,6 +255,22 @@ p {
     display: table;
 }
 
+.search {
+    max-width: 600px;
+    margin: 0 auto 20px auto;
+    border: 1px solid #cecece;
+}
+
+.search input {
+    box-sizing: border-box;
+    width: 100%;
+    height: 30px;
+    padding: 0 15px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
 .data-table {
     margin-top: 50px;
 }
